# auvsl_neural_ode

./: CMakeLists.txt  README.md  todo.org
data/: nn_pretrained.csv
include/auvsl_dynamics/: BekkerDynamics.h  BekkerTireModel.h  HybridDynamics.h  TireNetwork.h  utils.h
scripts/: count.py  gen_fake_data.py  plot_loss.py  plot_train3.py  preprocess.py  pretrain.py  pretrain_no_ratios.py  pretrain_no_ratios_simple.py  pretrain_vx_vy.py  solver_nn_gc.cpp  temp.csv  train1.net  train_no_ratio1.net
src/: BaseNetwork.cpp  BaseNetwork.h  BekkerSystem.cpp  BekkerSystem.h  TestTerrainMaps.cpp  TestTerrainMaps.h  Trainer.cpp  Trainer.h  VehicleSimulatorAD.h  VehicleSimulatorADAD.h  VehicleSimulatorF.cpp  VehicleSimulatorF.h  VehicleSystem.cpp  VehicleSystem.h  bekker_model.cpp  bekker_model.h  evaluate.cpp  evaluate_bekker.cpp  gen_tire_model_data.cpp  generate_code.cpp  plot_stuff.cpp  train.cpp  train_bekker.cpp
src/auvsl_dynamics/: BekkerDynamics.cpp  BekkerTireModel.cpp  HybridDynamics.cpp  TireNetwork.cpp  TireNetworkWeights.cpp  temp.cpp  utils.cpp
src/linear/: LinearSystem.cpp  LinearSystem.h  LinearTrainer.cpp  LinearTrainer.h  train_linear.cpp
src/types/: GroundTruthDataRow.h  Scalars.h  System.h  SystemFactory.h  TerrainMap.h
test/: test_Bekker.cpp  test_Terrain.cpp  test_TireNetwork.cpp  test_Trainer.cpp  test_Vehicle.cpp
